examples/pts/pos/functionDoubleUse.effekt
def run{func: _ } = {
    val a: Int = func(1)
    val b = func(2)
    func(3)
}

def main() = {
    ()
}