examples/pts/neg/externFunction.effekt
extern pure def test(x: _): Unit = "test"

val a = test(1)

def main() = {
    ()
}